feat:add rev image

--- a/content/posts/go/etcd-2021-04-10.md
+++ b/content/posts/go/etcd-2021-04-10.md
@@ -177,7 +177,7 @@ func GetKey(key string) {
 
 我们都知道，etcd从 v3 开始，底层实现了 MVCC 机制。所以在 etcd 中的 key 是存在多个历史版本的。 
 我们会在命令行中 `etcdctl get hello --rev=?`,比如
-![image](https://image.aabbccm.com/image/etcd/rev.png)
+![image](https://image.aabbccm.com/image/etcd/rev-1.png)
 可以看到，不同版本的 key("hello")的值是不一样的。
 
 ```go
