--- a/content/posts/go/etcd-2021-04-15.md
+++ b/content/posts/go/etcd-2021-04-15.md
@@ -9,7 +9,7 @@ tags :
 
 ---
 
-上一篇我们主要是介绍了 etcd 使用场景以及最基础性的一些操作(put get watch)。 这一篇我们接着实战etcd的一些应用。无论深入哪个开源项目，首先我们得先学会使用它们。
+上一篇我们主要介绍了 etcd 使用场景以及最基础性的一些操作(put、get、watch)。 这一篇我们接着实战etcd其他业务场景。
 
 ### 基于 etcd 的分布式锁
 
@@ -73,7 +73,7 @@ func Lock(id int, lockName string) {
 }
 ```
 
-如果你看了上篇文章，这里的代码也很简单。然后我们可以写个简单的脚本运行以下看看结果
+我们再写个脚本运行，看看结果。
 
 ```go
 package main
@@ -97,21 +97,25 @@ func main() {
 }
 ```
 
-我们发起了 10 个 并发抢同一个key锁的命令。运行脚本查看结果。
+我们发起了10个并发抢同一个 key 锁的命令。运行结果如下，
 ![image](https://image.syst.top/image/etcd/lock.png)
 
-从图片可以看到，同一时刻一定只有一个 G 得到锁，一个 G 获取到一个锁的前提一定是当前 key 未被锁，别觉得这是废话，这是必然的。
+从图片可以看到，同一时刻一定只有一个 G 得到锁，一个 G 获取到一个锁的前提一定是当前 key 未被锁。
+
+有人要问了，当一个锁解开时，之前未获取到锁而发生等待的客户端谁先获取到这把锁？ 这个问题，我们后续分析原理的时候再揭晓。
 
 
 说到分布式锁，不得不提起 redis。它有一个看似安全实际一点都不安全的分布式锁。它的命令模式是
+
 ```go
 set key value [EX seconds] [PX milliseconds] [NX|XX]
 ```
+
 这其中，介绍两个关键的属性:
 - EX 标示设置过期时间，单位是秒。 
-- NX 表示 当 对应的 key 不存在时，才创建。 
+- NX 表示 当对应的 key 不存在时，才创建。 
 
-我们在使用 redis 做分布式锁会这么写。这里使用了包 `https://github.com/go-redis/redis`
+我们在使用 redis 做分布式锁的时候会这么写。(代码用了包 `https://github.com/go-redis/redis`)
 ```go
 func RedisLock(item int) {
 	rdb = redis.NewClient(&redis.Options{
@@ -137,10 +141,9 @@ func RedisLock(item int) {
 rdb.SetNX(ctx, "key", "value", 2*time.Second)
 ```
 
-我们规定锁的过期时间是2秒，下面有一句 `time.Sleep(1 * time.Second) //模拟业务耗时` 简单粗暴的模拟了
-处理业务的耗时，业务处理结束，我们删除 key，解锁 `rdb.Del(ctx, "key")` 。
+我们规定锁的过期时间是2秒，下面有一句 `time.Sleep(1 * time.Second) ` 用来模拟处理业务的耗时。业务处理结束，我们删除 key `rdb.Del(ctx, "key")` 。
 
-我们再简单地模拟并发场景。
+我们写个简单的脚本，
 ```go
 func main() {
 	var wg sync.WaitGroup
@@ -155,11 +158,13 @@ func main() {
 }
 ```
 
-我们开启十个 G 并发的调用 `RedisLock` 函数，函数内部会新建一个 redis 客户端，本质上是十个客户端。我们运行这段程序。
+我们开启十个 G 并发的调用 `RedisLock` 函数。每次调用，函数内部都会新建一个 redis 客户端，本质上是10个客户端。
+
+运行这段程序，
 
 ![image](https://image.syst.top/image/redis/lock-1.png)
 
-从图中看出，同一时刻只有一个客户端获取到锁，并且在一秒的任务处理后释放了锁，好像没太大的问题。
+从图中看出，同一时刻只有一个客户端获取到锁，并且在一秒的任务处理后，释放了锁，好像没太大的问题。
 
 那么，我再写一个简单的例子。
 
@@ -215,29 +220,38 @@ func ExampleLock(item int, timeSleep time.Duration) {
 	rdb.Del(ctx, "key")
 }
 ```
-我们设置锁的过期时间是 3 秒，而获取锁之后的处理时间为 7 秒。然后我们开启两个 G。
+我们设置锁的过期时间是 3 秒，而获取锁之后的任务处理时间为 7 秒。
+
+然后我们开启两个 G。
 ```go
 ExampleLock(1, 0)
 ExampleLock(2, 5)
 ```
-其中 5 从代码中可以看出，是指启动 G 后过5秒去获取锁。
-那么这段粗暴的代码整体流程就是这样的:G(1) 获取到锁后，设置的锁持有时间是 3 秒，由于任务执行需要7 秒的时间，因此在 3 秒过后锁会自动释放。
-G(2)在第 5 秒的时候可以获取到锁，然后它也得 任务执行 7 秒。然后，G(1) 7 秒时间过后释放锁，G(2) 7 秒时间过后释放锁。
+其中第二行数字5，从代码中可以看出，是指启动 G 后过5秒去获取锁。
+
+这段代码整体流程是这样的:G(1) 获取到锁后，设置的锁持有时间是3秒，由于任务执行需要7秒的时间，因此在3秒过后锁会自动释放。
+G(2) 可以在第5秒的时候获取到锁，然后它执行任务也得7秒。最后，G(1)在获取锁后7秒执行释放锁的操作，G(2)同理。
 
 ![image](https://image.syst.top/image/redis/lock-2.png)
 
-发现问题了吗？G(1)的锁在 3 秒后已经自动释放了。但是在任务执行耗时 7 秒后执行了解锁的操作,可此时这个锁是 G(2)的呀。
-那么接下来由于G(1)误解了G(2)的锁，如果此时有其他的 G，那么就可以获取到锁。
-等G(2)任务执行结束，同理又会误解其他G的锁，这是一个恶性循环。
-这也是掘金一篇由 redis 分布式锁造成的茅台超卖的重大事故原因之一。
-至于还有什么原因，可以自行查看这篇文章。
+发现问题了吗？
 
+G(1) 的锁在3秒后已经自动释放了。但是在任务处理结束后又执行了解锁的操作,可此时这个锁是 G(2) 的呀。
+
+那么接下来由于 G(1) 误解了 G(2) 的锁，如果此时有其他的 G，那么就可以获取到锁。
+
+等 G(2) 任务执行结束，同理又会误解其他 G 的锁，这是一个恶性循环。
+这也是掘金一篇由 redis 分布式锁造成茅台超卖重大事故的原因之一。
+
+至于其他的，可以自行查看这篇文章[1]。
 ### 基于 etcd 的分布式队列
 
 对队列更多的理论知识就不加以介绍了。我们都知道，队列是一种先进先出的数据结构，一般也只有入队和出队两种操作。
-我们常常在单机的应用中使用到队列，那么，如何实现一个分布式的队列呢?。
+我们常常在单机的应用中使用到队列。
 
-我们可以使用 etcd 开箱即用的工具。在 etcd 底层 recipe 包里结构 Queue，实现了一个多读多写的分布式队列。
+那么，如何实现一个分布式的队列呢?。
+
+我们可以使用 etcd 开箱即用的工具，在 `etcd` 底层 `recipe` 包里结构 `Queue`，实现了一个多读多写的分布式队列。
 ```go
 type Queue struct {
 	client *v3.Client
@@ -250,7 +264,7 @@ func (q *Queue) Dequeue() (string, error)
 func (q *Queue) Enqueue(val string)
 
 ```
-我们基于此包可以很方面的实现。
+我们基于此包可以很方便的实现。
 ```go
 package src
 
@@ -263,6 +277,7 @@ import (
 	"sync"
 	"time"
 )
+var addr = flag.String("addr", "http://127.0.0.1:2379", "etcd address")
 
 // 初始化etcd客户端
 func initEtcdClient() *clientv3.Client {
@@ -318,10 +333,10 @@ func Pop(keyName string) {
 
 ```
 
-在 push 中，我们开启三轮发送数值入队，每此发送十个，发送一轮休息 2秒。
-在 pop 中，通过死循环获取队列中的值。
+在 `push` 中，我们开启3轮发送值入队，每次发送10个，发送一轮休息2秒。
+在 `pop` 中，通过死循环获取队列中的值。
 
-我们也简单的运行下。
+运行脚本程序如下。
 ```go
 package main
 
@@ -339,13 +354,16 @@ func main() {
 }
 ```
 
-我们使用两个 G 代表 分别运行 push 和 pop 操作。
-同时为了达到运行效果，我们先运行 pop 等待有入队的元素。
+我们使用两个 `G` 代表 分别运行 `push` 和 `pop` 操作。
+同时为了达到运行效果，我们先运行 `pop` 等待有入队的元素。
+运行结果动画如下,
 
 ![image](https://image.syst.top/image/etcd/queue.gif)
 
-etcd 还提供了优先级的分布式的队列。和上面的用户相差不多。只是在入队的时候，不仅仅需要提供一个值，还需要提供一个整数，来体现当前 push 值的优先级。数值越小，优先级越高。
-我们可以改动一下上述的代码。
+`etcd` 还提供了优先级的分布式的队列。和上面的用法相似。只是在入队的时候，不仅仅需要提供一个值，还需要提供一个整数，来表示当前 `push` 值的优先级。数值越小，优先级越高。
+
+我们改动一下上述的代码。
+
 ```go
 package src
 
@@ -358,6 +376,7 @@ import (
 	"sync"
 	"time"
 )
+var addr = flag.String("addr", "http://127.0.0.1:2379", "etcd address")
 
 // 初始化etcd客户端
 func initEtcdClient() *clientv3.Client {
@@ -408,7 +427,7 @@ func PriorityPop(keyName string) {
 	}
 }
 ```
-然后我们的测试代码:
+然后以下是我们的测试代码:
 ```go
 package main
 
@@ -432,7 +451,7 @@ func main() {
 
 ```
 
-我们把0到9的数 push 到队列中，对应的优先级整数值就是它本身，push 完毕，我们运行 PriorityPop，看结果显示就是从0到9
+我们把0到9的数并发的 `push` 到队列中，对应的优先级整数值就是它本身，`push` 完毕，我们运行 `PriorityPop` 函数，看最终结果显示就是从0到9。
 
 ![image](https://image.syst.top/image/etcd/queue-2.gif)
 
@@ -441,6 +460,10 @@ func main() {
 这篇文章主要介绍了如何使用 etcd 实现分布式锁以及分布式队列。其他etcd的场景，可以自行实践。
 
 
+### 附录
+
+[1]
+https://juejin.cn/post/6854573212831842311
 
 
 
